overview: Fix crash when swiping to close.

If items are swiped to close quickly one after the other, we may crash.
This is because there is a animation before the window closes and deletes
the selector item, which will still be on WindowGrids internal collection.
However when the nudge starts the selector items may still be on the
collection so the nudge indexes are stored incorrectly.

This cl will prevent nudges from starting if any of the window items are
currently animating to close. We could instead find some logics which
handles the windows which are closing, but this way is much simpler and
users who are closing windows so quickly will probably not notice the
lack of nudging.

Test: manual
Bug: 867573
Change-Id: Ia268d152c0862b81481199d03916b010f4403c59
Reviewed-on: https://chromium-review.googlesource.com/1150696
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578092}
Former-commit-id: 35e605d2c413aef4719dea86dc3b55288650b985